--- a/Crop/Base.lproj/Main.storyboard
+++ b/Crop/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,62 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cerro1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Ang-ef-rL2">
+                                <rect key="frame" x="148" y="85" width="304" height="356"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="304" id="9a6-77-4f9"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="356" id="fTS-RT-jJ0"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="29B-yJ-v9F">
+                                <rect key="frame" x="284" y="483" width="31" height="30"/>
+                                <state key="normal" title="crop">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cropit:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="5IB-XW-3mk"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="148" id="3tW-zg-gx4"/>
+                            <constraint firstAttribute="centerX" secondItem="29B-yJ-v9F" secondAttribute="centerX" id="4kV-Og-Cul"/>
+                            <constraint firstAttribute="centerY" secondItem="29B-yJ-v9F" secondAttribute="centerY" constant="-198" id="5lp-kp-hHx"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="65" id="66N-qa-hUL"/>
+                            <constraint firstAttribute="centerY" secondItem="Ang-ef-rL2" secondAttribute="centerY" constant="37" id="AbP-MC-2oM"/>
+                            <constraint firstAttribute="trailing" secondItem="Ang-ef-rL2" secondAttribute="trailing" constant="148" id="BW5-sS-iCo"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ang-ef-rL2" secondAttribute="bottom" constant="159" id="Qj7-hB-Fd4"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="104" id="VOs-4K-i7f"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="65" id="Vay-v0-hiS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ang-ef-rL2" secondAttribute="trailing" constant="160" id="XGk-ic-BmT"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ang-ef-rL2" secondAttribute="bottom" constant="159" id="f8Y-1K-z6t"/>
+                            <constraint firstAttribute="centerX" secondItem="Ang-ef-rL2" secondAttribute="centerX" id="nkJ-L1-Spa"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3tW-zg-gx4"/>
+                                <exclude reference="66N-qa-hUL"/>
+                                <exclude reference="BW5-sS-iCo"/>
+                                <exclude reference="VOs-4K-i7f"/>
+                                <exclude reference="Vay-v0-hiS"/>
+                                <exclude reference="XGk-ic-BmT"/>
+                                <exclude reference="Qj7-hB-Fd4"/>
+                                <exclude reference="f8Y-1K-z6t"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="cropButton" destination="29B-yJ-v9F" id="pqd-TZ-rY7"/>
+                        <outlet property="imageView" destination="Ang-ef-rL2" id="9z7-Z8-nOR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="cerro1.jpg" width="320" height="357"/>
+    </resources>
 </document>
