--- a/Crop/Base.lproj/Main.storyboard
+++ b/Crop/Base.lproj/Main.storyboard
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="u2V-IT-hKI">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="Pv6-FK-d1v">
+            <objects>
+                <navigationController id="u2V-IT-hKI" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="64E-l9-EXT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="zFk-lm-uUx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6HH-EI-kBk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-676" y="350"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -18,52 +34,57 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cerro1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Ang-ef-rL2">
-                                <rect key="frame" x="148" y="85" width="304" height="356"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="304" id="9a6-77-4f9"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="356" id="fTS-RT-jJ0"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="600" id="9a6-77-4f9"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="585" id="fTS-RT-jJ0"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9a6-77-4f9"/>
+                                        <exclude reference="fTS-RT-jJ0"/>
+                                    </mask>
+                                </variation>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="29B-yJ-v9F">
-                                <rect key="frame" x="284" y="483" width="31" height="30"/>
-                                <state key="normal" title="crop">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="cropit:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="5IB-XW-3mk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Ang-ef-rL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="148" id="3tW-zg-gx4"/>
-                            <constraint firstAttribute="centerX" secondItem="29B-yJ-v9F" secondAttribute="centerX" id="4kV-Og-Cul"/>
-                            <constraint firstAttribute="centerY" secondItem="29B-yJ-v9F" secondAttribute="centerY" constant="-198" id="5lp-kp-hHx"/>
                             <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="65" id="66N-qa-hUL"/>
-                            <constraint firstAttribute="centerY" secondItem="Ang-ef-rL2" secondAttribute="centerY" constant="37" id="AbP-MC-2oM"/>
+                            <constraint firstAttribute="centerY" secondItem="Ang-ef-rL2" secondAttribute="centerY" id="AbP-MC-2oM"/>
                             <constraint firstAttribute="trailing" secondItem="Ang-ef-rL2" secondAttribute="trailing" constant="148" id="BW5-sS-iCo"/>
+                            <constraint firstAttribute="bottom" secondItem="Ang-ef-rL2" secondAttribute="bottom" priority="500" id="CLP-vn-Mmf"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="Fyv-Z6-5ZR"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="OL0-x4-LTO"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ang-ef-rL2" secondAttribute="bottom" constant="159" id="Qj7-hB-Fd4"/>
                             <constraint firstItem="Ang-ef-rL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="104" id="VOs-4K-i7f"/>
                             <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="65" id="Vay-v0-hiS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ang-ef-rL2" secondAttribute="trailing" constant="160" id="XGk-ic-BmT"/>
+                            <constraint firstAttribute="trailing" secondItem="Ang-ef-rL2" secondAttribute="trailing" id="Yfn-sL-K94"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="bqL-vX-CXW"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ang-ef-rL2" secondAttribute="bottom" constant="159" id="f8Y-1K-z6t"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" constant="-64" id="gSa-lp-F30"/>
+                            <constraint firstItem="Ang-ef-rL2" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="nD5-SO-IQv"/>
                             <constraint firstAttribute="centerX" secondItem="Ang-ef-rL2" secondAttribute="centerX" id="nkJ-L1-Spa"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="3tW-zg-gx4"/>
                                 <exclude reference="66N-qa-hUL"/>
+                                <exclude reference="AbP-MC-2oM"/>
                                 <exclude reference="BW5-sS-iCo"/>
                                 <exclude reference="VOs-4K-i7f"/>
                                 <exclude reference="Vay-v0-hiS"/>
                                 <exclude reference="XGk-ic-BmT"/>
+                                <exclude reference="nD5-SO-IQv"/>
+                                <exclude reference="nkJ-L1-Spa"/>
                                 <exclude reference="Qj7-hB-Fd4"/>
                                 <exclude reference="f8Y-1K-z6t"/>
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="RGe-0m-Vgh"/>
                     <connections>
-                        <outlet property="cropButton" destination="29B-yJ-v9F" id="pqd-TZ-rY7"/>
                         <outlet property="imageView" destination="Ang-ef-rL2" id="9z7-Z8-nOR"/>
                     </connections>
                 </viewController>
